--- a/cyclope/apps/articles/templates/articles/article_teaser.html
+++ b/cyclope/apps/articles/templates/articles/article_teaser.html
@@ -1,22 +1,36 @@
+{% load i18n tagging_tags %}
+
   <div class="article teaser">
     {% if  article.pretitle %}
     <span class="pretitle">{{ article.pretitle }} | </span>
     {% endif%}
-    <span class="date">{{ article.date }}</span>
+    {% if article.date %}<span class="date">{{ article.date }}</span>{% endif %}
      <h2 class="title"><a href="{% url article-detail article.slug %}">{{ article.name }}</a></h2>
-      {% if article.images.count %}
+      {% if article.images.count and not region_view %}
       <a href="{% url article-detail article.slug %}">
         <img src="{{ article.first_image.thumbnail_image.url }}" width="135" border="0"/>
       </a>
       {% endif %}
     <p class="summary">
-      {{ article.summary }} (<a href="{% url article-detail article.slug %}">leer todo</a>).
+      {{ article.summary }}
+      <a href="{% url article-detail article.slug %}">{% trans "More" %}</a>
     </p>
-    {% if article.author %}
-    <span class="author">{{ article.author }}</span>
-    {% endif %}
-    <span class="tags">
-      {{ article.tags }}
-    </span>
+    {% if not region_view %}
+        {% if article.author %}
+        <span class="author">{% trans "By" %} {{ article.author }}</span>
+        {% endif %}
+        {% if article.tags %}
+        <span class="tags">
+          <h3>
+          {% trans "Tags" %}:
+          {% tag_cloud_for_model articles.Article as article_tags with min_count=1 distribution=log %}
+          {% for tag in article_tags %}
+            <a href="/tag/{{ tag.name|slugify }}" class="tag">{{tag.name}}</a>{% if not forloop.last%},{% endif%}
+
+          {% endfor %}
+          </h3>
+        </span>
+        {% endif %}
     <div class="clear"></div>
+    {% endif %}
   </div>
