--- a/cyclope/templates/comments/list.html
+++ b/cyclope/templates/comments/list.html
@@ -6,11 +6,9 @@
     <span class="when_who">
       {{ comment.submit_date }}
       {% if comment.name %}
-           - {{ comment.name }}
+           - {% trans 'By' %}: {{ comment.name }}
       {% endif %}
-      <a href="{% get_comment_permalink comment %}">
-        - permalink
-      </a>
+     - (<a href="{% get_comment_permalink comment %}">permalink</a>)
     </span>
     <p><br/>{{ comment.comment }}</p>
   </div>
