--- a/cyclope/templates/cyclope/staticpage_detail.html
+++ b/cyclope/templates/cyclope/staticpage_detail.html
@@ -10,6 +10,6 @@ When showing the StaticPage as the main content of the view, the host_template i
 <div class="staticpage detail">
   <h1>{{ staticpage.name }} </h1>
   <p>{{ staticpage.text|safe }}</p>
-<div>
+</div>
 
 {% endblock content%}
