moved staticpages to it's own app. minor code restructuring and fixes.

--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_detail.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_detail.html
@@ -8,8 +8,7 @@ When showing the StaticPage as the main content of the view, the host_template i
 {% block content %}
 
 <div class="staticpage detail">
-  <h1>{{ staticpage.name }} </h1>
-  <p>{{ staticpage.text|safe }}</p>
+  {{ staticpage.text|safe }}
 </div>
 
 {% endblock content%}
